--- a/transform-translate.html
+++ b/transform-translate.html
@@ -16,9 +16,11 @@
     transfrom: translateX(n); n만큼 현재위치에서 x축으로 이동 
     transfrom: translateY(n); n만큼 현재위치에서 x축으로 이동 
     */
+    /* 아아아아아아앙ㅇ아아아아아아 */
     div:hover{
       transform:translate(100px, 200px); /* 오른쪽으로 100px, 아래쪽으로 200px 이동 */
     }
+    /* 배과렆라아파팦파아ㅏㅏ아ㅏ아아ㅏ아 */
   </style>
 </head>
 <body>
