--- a/transform-translate.html
+++ b/transform-translate.html
@@ -11,6 +11,7 @@
       height:100px;
       background-color:red;      
     }
+    /* 리베이스한다ㅏ아아아아ㅏ아아 */
     /* 2/23 복사본 코드 수정 연습 */
     /* 변형 효과에서 transform 속성 설명(좌표이동) */
     /* transform:translate(x,y); 오른쪽으로 x, 아래쪽으로 y만큼 이동
